--- a/RZDKursovoy/MainWindow.xaml
+++ b/RZDKursovoy/MainWindow.xaml
@@ -7,7 +7,7 @@
         xmlns:dragablz="http://dragablz.net/winfx/xaml/dragablz"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
-        Title="Главное меню" Height="450" Width="799" WindowStartupLocation="CenterScreen">
+        Title="Главное меню" Closing="Window_Closing" Height="450" Width="799" WindowStartupLocation="CenterScreen">
     <Grid>
         <dragablz:TabablzControl x:Name="ControlMenu" Loaded="ControlMenu_Loaded">
             <TabItem x:Name="Reservation_TAB" Header="Резервирование" Margin="0">
