--- a/RZDKursovoy/Authorization.xaml
+++ b/RZDKursovoy/Authorization.xaml
@@ -6,12 +6,13 @@
         xmlns:local="clr-namespace:RZDKursovoy"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
-        Title="" Height="344.845" Width="532.474" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
+        Title="" MinHeight="380" MinWidth="570" Height="380" Width="570" ResizeMode="CanResize" WindowStartupLocation="CenterScreen">
     <Grid x:Name="mainGrid">
-        <Grid x:Name="RegGrid" d:IsHidden="True">
+        <!--516,303-->
+        <Grid x:Name="RegGrid">
             <GroupBox x:Name="RegGB" Header="Регистрация">
                 <Grid>
-                    <TextBox x:Name="RegLoginBox" PreviewTextInput="RegLoginBox_PreviewTextInput"  MaxLength="30" Style="{StaticResource MaterialDesignFloatingHintTextBox}" HorizontalAlignment="Center" Margin="0,0,0,140" TextWrapping="Wrap" VerticalAlignment="Center" TabIndex="0" Height="40" Width="148" TextChanged="RegLoginBox_TextChanged">
+                    <TextBox x:Name="RegLoginBox" PreviewTextInput="RegLoginBox_PreviewTextInput"  MaxLength="30" Style="{StaticResource MaterialDesignFloatingHintTextBox}" HorizontalAlignment="Center" Margin="0,0,0,140" TextWrapping="Wrap" VerticalAlignment="Center" TabIndex="0" Height="40" Width="310" TextChanged="RegLoginBox_TextChanged">
                         <materialDesign:HintAssist.Hint>
                             <StackPanel
                                     Orientation="Horizontal"
@@ -24,7 +25,7 @@
                             </StackPanel>
                         </materialDesign:HintAssist.Hint>
                     </TextBox>
-                    <TextBox x:Name="RegPassBox" PreviewTextInput="RegPassBox_PreviewTextInput"  Style="{StaticResource MaterialDesignFloatingHintTextBox}" HorizontalAlignment="Center" Margin="0,0,0,40" VerticalAlignment="Center" TabIndex="1" Height="40" Width="148" TextChanged="RegPassBox_TextChanged">
+                    <TextBox x:Name="RegPassBox" PreviewTextInput="RegPassBox_PreviewTextInput"  Style="{StaticResource MaterialDesignFloatingHintTextBox}" HorizontalAlignment="Center" Margin="0,0,0,40" VerticalAlignment="Center" TabIndex="1" Height="40" Width="310" TextChanged="RegPassBox_TextChanged">
                         <materialDesign:HintAssist.Hint>
                             <StackPanel
                                     Orientation="Horizontal"
@@ -37,14 +38,27 @@
                             </StackPanel>
                         </materialDesign:HintAssist.Hint>
                     </TextBox>
-                    <Button x:Name="RegRegButtonBEEP" Margin="0,120,0,0" Content="Зарегистрироваться" Click="RegRegButtonBEEP_Click" HorizontalAlignment="Center" VerticalAlignment="Center" Width="214"/>
+                    <Button x:Name="RegRegButtonBEEP" Margin="0,120,0,0" Content="Зарегистрироваться" Click="RegRegButtonBEEP_Click" HorizontalAlignment="Center" VerticalAlignment="Center" Width="310"/>
                     <CheckBox x:Name="CheckProcessingPersonalDataBox" Content="Я даю согласие на обработку персональных данных" Margin="0,40,0,0"  HorizontalAlignment="Center" VerticalAlignment="Center"></CheckBox>
                     <Button x:Name="RegExit" Margin="0,0,0,10" Content="Выход" VerticalAlignment="Bottom" Click="RegExit_Click"/>
                 </Grid>
             </GroupBox>
         </Grid>
-        <Grid x:Name="AuthGrid">
-            <TextBox x:Name="loginBox" PreviewTextInput="loginBox_PreviewTextInput" KeyDown="loginBox_KeyDown" Style="{StaticResource MaterialDesignFloatingHintTextBox}" HorizontalAlignment="Center" Margin="0,0,0,70" TextWrapping="Wrap" VerticalAlignment="Center" MaxLength="30" TabIndex="0" Height="40" Width="148" >
+        <Grid x:Name="AuthGrid" d:IsHidden="True">
+            <Grid.RowDefinitions>
+                <RowDefinition></RowDefinition>
+                <RowDefinition Height="50"></RowDefinition>
+                <RowDefinition Height="50"></RowDefinition>
+                <RowDefinition Height="50"></RowDefinition>
+                <RowDefinition Height="50"></RowDefinition>
+                <RowDefinition Height="50"></RowDefinition>
+                <RowDefinition></RowDefinition>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+            <TextBlock x:Name="progNameText" Grid.Column="0" Grid.Row="1" Margin="0,0,0,0" TextWrapping="Wrap" Text="AVB Tickets. Авторизация" FontSize="20" TextAlignment="Center" FontFamily="Segoe UI Light" VerticalAlignment="Center"/>
+            <TextBox x:Name="loginBox" Grid.Column="0" Grid.Row="2" PreviewTextInput="loginBox_PreviewTextInput" KeyDown="loginBox_KeyDown" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="100,0" TextWrapping="Wrap" MaxLength="30" TabIndex="0" Height="40" >
                 <materialDesign:HintAssist.Hint>
                     <StackPanel
                         Orientation="Horizontal"
@@ -57,10 +71,7 @@
                     </StackPanel>
                 </materialDesign:HintAssist.Hint>
             </TextBox>
-            <Button x:Name="authButton" Content="Авторизоваться" Margin="60,0,60,80" Height="Auto" TabIndex="2" IsDefault="True" VerticalAlignment="Bottom" Click="authButton_Click" RenderTransformOrigin="0.494,0.5"/>
-            <Button x:Name="regButton" Content="Регистрация" Click="regButton_Click" Margin="60,0,60,45" Height="Auto"  TabIndex="3" VerticalAlignment="Bottom"/>
-            <TextBlock x:Name="progNameText" HorizontalAlignment="Center" Margin="0,30,0,0" TextWrapping="Wrap" Text="AVB Tickets. Авторизация" VerticalAlignment="Top" FontSize="20" Height="66" Width="187" TextAlignment="Center" FontFamily="Segoe UI Light"/>
-            <PasswordBox x:Name="passBox" PreviewTextInput="passBox_PreviewTextInput"  Style="{StaticResource MaterialDesignFloatingHintPasswordBox}" HorizontalAlignment="Center" Margin="0,0,0,0" VerticalAlignment="Center" TabIndex="1" Height="40" Width="148">
+            <PasswordBox x:Name="passBox" Grid.Column="0" Grid.Row="3"  PreviewTextInput="passBox_PreviewTextInput"  Style="{StaticResource MaterialDesignFloatingHintPasswordBox}" Margin="100,0" TabIndex="1">
                 <materialDesign:HintAssist.Hint>
                     <StackPanel
                         Orientation="Horizontal"
@@ -73,6 +84,8 @@
                     </StackPanel>
                 </materialDesign:HintAssist.Hint>
             </PasswordBox>
+            <Button Grid.Column="0" Grid.Row="4" x:Name="authButton" Content="Авторизоваться" Margin="100,10" Height="Auto" TabIndex="2" IsDefault="True" Click="authButton_Click" RenderTransformOrigin="0.494,0.5"/>
+            <Button Grid.Column="0" Grid.Row="5" x:Name="regButton" Content="Регистрация" Click="regButton_Click" Margin="100,10" Height="Auto"  TabIndex="3"/>
         </Grid>
     </Grid>
 </Window>
