--- a/RZDKursovoy/MainWindow.xaml
+++ b/RZDKursovoy/MainWindow.xaml
@@ -7,10 +7,10 @@
         xmlns:dragablz="http://dragablz.net/winfx/xaml/dragablz"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
-        Title="Главное меню" Closing="Window_Closing" Height="450" Width="799" WindowStartupLocation="CenterScreen">
+        Title="Главное меню" Closing="Window_Closing" MinHeight="450" MinWidth="799" Height="450" Width="799" WindowStartupLocation="CenterScreen">
     <Grid>
         <dragablz:TabablzControl x:Name="ControlMenu" Loaded="ControlMenu_Loaded">
-            <TabItem x:Name="Reservation_TAB" Header="Резервирование" Margin="0">
+            <TabItem x:Name="Reservation_TAB" Header="Резервирование" Margin="0" d:IsHidden="True">
                 <Grid x:Name="ChooseRout">
                     <ComboBox PreviewTextInput="Arrival_BOX_PreviewTextInput"  x:Name="Arrival_BOX" materialDesign:HintAssist.Hint="Точка отправления"
                       IsEditable="True"
@@ -32,8 +32,14 @@
                     </Grid>
                     <Grid x:Name="LK_NotEmpty">
                         <DataGrid SelectionChanged="ShowBuyedTickets_SelectionChanged" IsReadOnly="True" x:Name="ShowBuyedTickets" Margin="0,0,0,30"></DataGrid>
-                        <Button x:Name="CancelTripBUTTON" Click="CancelTripBUTTON_Click" VerticalAlignment="Bottom" Width="394.5" HorizontalAlignment="Left" Content="Отменить поездку и вернуть деньги за билет"></Button>
-                        <Button x:Name="PrintTicketBUTTON" Click="PrintTicketBUTTON_Click" Width="394.5" VerticalAlignment="Bottom" HorizontalAlignment="Right" IsDefault="True" Content="Сохранить билет"></Button>
+                        <Grid VerticalAlignment="Bottom" Height="34">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition></ColumnDefinition>
+                                <ColumnDefinition></ColumnDefinition>
+                            </Grid.ColumnDefinitions>
+                            <Button Grid.Column="0" x:Name="CancelTripBUTTON" Click="CancelTripBUTTON_Click" Content="Отменить поездку и вернуть деньги за билет" Margin="0" Padding="0" VerticalContentAlignment="Center" Height="34"/>
+                            <Button Grid.Column="1" x:Name="PrintTicketBUTTON" Click="PrintTicketBUTTON_Click" IsDefault="True" Content="Сохранить билет" Padding="0" Height="34"/>
+                        </Grid>
                     </Grid>
                 </Grid>
             </TabItem>
