--- a/RZDKursovoy/ReservationForm.xaml
+++ b/RZDKursovoy/ReservationForm.xaml
@@ -7,7 +7,7 @@
         xmlns:local="clr-namespace:RZDKursovoy"
         xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
         mc:Ignorable="d"
-        Title="Резервирование" Height="450" Width="799" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
+        Title="Резервирование" MinHeight="450" MinWidth="799" Height="450" Width="799" ResizeMode="CanResize" WindowStartupLocation="CenterScreen">
     <Grid>
         <GroupBox x:Name="ChooseTrainBox" Header="Выбор поезда" Margin="0" d:IsHidden="True">
             <Grid>
@@ -16,31 +16,58 @@
                 <DataGrid AutoGenerateColumns="True" AutoGeneratingColumn="ChooseTrainGRID_AutoGeneratingColumn"  SelectionChanged="ChooseTrainGRID_SelectionChanged" IsReadOnly="True" x:Name="ChooseTrainGRID" Margin="0,0,0,30" Loaded="ChooseTrainGRID_Loaded"/>
             </Grid>
         </GroupBox>
-        <GroupBox x:Name="ChooseTrainTypeBox" Header="Выбор места" Margin="0,0,0,0" Visibility="Hidden" d:IsHidden="True">
+        <GroupBox x:Name="ChooseTrainTypeBox" Header="Выбор места" Margin="0,0,0,0" d:IsHidden="True">
             <Grid>
-                <Grid x:Name="StepOneGrid">
-                    <ComboBox x:Name="ChooseRailcarType" HorizontalAlignment="Left" Margin="10,26,0,0" VerticalAlignment="Top" Width="240"/>
-                    <Label x:Name="RailcarTypeLab" Content="Выберите тип вагона:&#xD;&#xA;" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top" FontWeight="Bold" Height="26" Width="240" HorizontalContentAlignment="Center"/>
-                    <Button x:Name="ChooseRailcarTypeButton" Content="Выбрать" HorizontalAlignment="Left" Margin="10,68,0,0" VerticalAlignment="Top" Click="ChooseRailcarTypeButton_Click" Width="240"/>
-                </Grid>
-                <Grid x:Name="StepTwoGrid" HorizontalAlignment="Center" VerticalAlignment="Top" Width="242" Margin="276,0,257,0">
-                    <Label x:Name="RailcarChooseNumberLab" Content="Выберите номер вагона:" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,0,0,0" Width="215" FontWeight="Bold" HorizontalContentAlignment="Center"></Label>
-                    <ComboBox x:Name="ChooseRailcarNumberBox" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,26,0,0" Width="215"></ComboBox>
-                    <Button x:Name="ChooseRailcarNumberButton" Content="Выбрать" HorizontalAlignment="Center" Margin="0,68,0,0" Click="ChooseRailcarNumberButton_Click" VerticalAlignment="Top" Width="215"/>
-                </Grid>
-                <Grid x:Name="StepThreeGrid" Margin="0,119,0,0">
-                    <Image x:Name="TrainCardImage" Margin="0,0,0,10"></Image>
-                </Grid>
-                <Grid x:Name="StepThreePlusGrid">
-                    <Label x:Name="SeatChooseNumberLab" Content="Выберите номер места:" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="540,0,0,0" Width="225" FontWeight="Bold" HorizontalContentAlignment="Center"/>
-                    <ComboBox x:Name="SeatChooseNumberBox" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="540,26,0,0" Width="225"/>
-                    <Button x:Name="SeatChooseNumberButton" Content="Выбрать" HorizontalAlignment="Center" Margin="540,68,0,0" VerticalAlignment="Top" Width="225" Click="SeatChooseNumberButton_Click"/>
+                <Grid x:Name="ChooseTrainTypeGRID">
+                    <Grid.RowDefinitions>
+                        <RowDefinition></RowDefinition>
+                        <RowDefinition></RowDefinition>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition></ColumnDefinition>
+                        <ColumnDefinition></ColumnDefinition>
+                        <ColumnDefinition></ColumnDefinition>
+                    </Grid.ColumnDefinitions>
+                    <Grid x:Name="StepOneGrid" Grid.Row="0" Grid.Column="0">
+                        <ComboBox x:Name="ChooseRailcarType" HorizontalAlignment="Center" Margin="0,26,0,0" VerticalAlignment="Top" Width="240"/>
+                        <Label x:Name="RailcarTypeLab" Content="Выберите тип вагона:&#xD;&#xA;" HorizontalAlignment="Center" Margin="0,0,0,0" VerticalAlignment="Top" FontWeight="Bold" Height="26" Width="240" HorizontalContentAlignment="Center"/>
+                        <Button x:Name="ChooseRailcarTypeButton" Content="Выбрать" HorizontalAlignment="Center" Margin="0,68,0,0" VerticalAlignment="Top" Click="ChooseRailcarTypeButton_Click" Width="240"/>
+                    </Grid>
+                    <Grid x:Name="StepTwoGrid" Grid.Row="0" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Top" Width="242" Margin="0,0,0,0">
+                        <Label x:Name="RailcarChooseNumberLab" Content="Выберите номер вагона:" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,0,0,0" Width="215" FontWeight="Bold" HorizontalContentAlignment="Center"></Label>
+                        <ComboBox x:Name="ChooseRailcarNumberBox" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,26,0,0" Width="215"></ComboBox>
+                        <Button x:Name="ChooseRailcarNumberButton" Content="Выбрать" HorizontalAlignment="Center" Margin="0,68,0,0" Click="ChooseRailcarNumberButton_Click" VerticalAlignment="Top" Width="215"/>
+                    </Grid>
+                    <Grid x:Name="StepThreeGrid" Grid.Row="1" Grid.ColumnSpan="3" Grid.Column="0"  Margin="0,0,0,0">
+                        <Image Grid.Row="1" Grid.Column="0" x:Name="TrainCardImage" Margin="0,0,0,10"></Image>
+                    </Grid>
+                    <Grid x:Name="StepThreePlusGrid" Grid.Row="0" Grid.Column="2">
+                        <Label  x:Name="SeatChooseNumberLab" Content="Выберите номер места:" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,0,0,0" Width="225" FontWeight="Bold" HorizontalContentAlignment="Center"/>
+                        <ComboBox x:Name="SeatChooseNumberBox" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,26,0,0" Width="225"/>
+                        <Button x:Name="SeatChooseNumberButton" Content="Выбрать" HorizontalAlignment="Center" Margin="0,68,0,0" VerticalAlignment="Top" Width="225" Click="SeatChooseNumberButton_Click"/>
+                    </Grid>
                 </Grid>
             </Grid>
         </GroupBox>
         <GroupBox x:Name="InputPersonalDataBox" Margin="0" BorderBrush="Black" Header="Ввод данных" Foreground="Black" Background="{x:Null}">
-            <Grid>
-                <TextBox x:Name="RegFamBox" PreviewTextInput="RegFamBox_PreviewTextInput" MaxLength="30" Style="{StaticResource MaterialDesignFloatingHintTextBox}" HorizontalAlignment="Center" Margin="0,0,0,0" VerticalAlignment="Top" Height="36" Width="200">
+            <Grid x:Name="test">
+                <Grid.RowDefinitions>
+                    <RowDefinition></RowDefinition>
+                    <RowDefinition Height="40"></RowDefinition>
+                    <RowDefinition Height="40"></RowDefinition>
+                    <RowDefinition Height="40"></RowDefinition>
+                    <RowDefinition Height="40"></RowDefinition>
+                    <RowDefinition Height="40"></RowDefinition>
+                    <RowDefinition Height="40"></RowDefinition>
+                    <RowDefinition Height="40"></RowDefinition>
+                    <RowDefinition></RowDefinition>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="150"></ColumnDefinition>
+                    <ColumnDefinition></ColumnDefinition>
+                    <ColumnDefinition Width="150"></ColumnDefinition>
+                </Grid.ColumnDefinitions>
+                <TextBox x:Name="RegFamBox" Grid.Column="1" Grid.Row="1" PreviewTextInput="RegFamBox_PreviewTextInput" MaxLength="30" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="0,0,0,0" VerticalAlignment="Center" Height="36">
                     <materialDesign:HintAssist.Hint>
                         <StackPanel
                                     Orientation="Horizontal"
@@ -51,7 +78,7 @@
                         </StackPanel>
                     </materialDesign:HintAssist.Hint>
                 </TextBox>
-                <TextBox MaxLength="30" x:Name="RegNameBox" PreviewTextInput="RegNameBox_PreviewTextInput" Style="{StaticResource MaterialDesignFloatingHintTextBox}" HorizontalAlignment="Center" Margin="0,40,0,0" VerticalAlignment="Top" Height="40" Width="200">
+                <TextBox MaxLength="30" Grid.Column="1" Grid.Row="2" x:Name="RegNameBox" PreviewTextInput="RegNameBox_PreviewTextInput" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="0,0,0,0" Height="36" VerticalAlignment="Center">
                     <materialDesign:HintAssist.Hint>
                         <StackPanel
                                     Orientation="Horizontal"
@@ -62,7 +89,7 @@
                         </StackPanel>
                     </materialDesign:HintAssist.Hint>
                 </TextBox>
-                <TextBox x:Name="RegPathrBox" PreviewTextInput="RegPathrBox_PreviewTextInput"  Style="{StaticResource MaterialDesignFloatingHintTextBox}" HorizontalAlignment="Center" Margin="0,80,0,0" VerticalAlignment="Top" MaxLength="30" Height="40" Width="200">
+                <TextBox x:Name="RegPathrBox"  Grid.Column="1" Grid.Row="3" PreviewTextInput="RegPathrBox_PreviewTextInput"  Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="0,0,0,0" VerticalAlignment="Center" MaxLength="30" Height="40">
                     <materialDesign:HintAssist.Hint>
                         <StackPanel
                                     Orientation="Horizontal"
@@ -73,9 +100,9 @@
                         </StackPanel>
                     </materialDesign:HintAssist.Hint>
                 </TextBox>
-                <materialDesign:PackIcon VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0,0,230,71" Kind="Phone" />
-                <xctk:MaskedTextBox x:Name="_maskedTextBox" LostFocus="_maskedTextBox_LostFocus" VerticalAlignment="Top" HorizontalAlignment="Center" Margin="0,140,0,0" Width="200" Height="20" GotFocus="_maskedTextBox_GotFocus"/>
-                <TextBox x:Name="RegPassSeries" PreviewTextInput="RegPassSeries_PreviewTextInput" Style="{StaticResource MaterialDesignFloatingHintTextBox}" HorizontalAlignment="Center" Margin="0,160,0,0" VerticalAlignment="Top" MaxLength="6" Height="40" Width="200">
+                <materialDesign:PackIcon  Grid.Column="0" Grid.Row="4" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="0,0,0,0" Kind="Phone" />
+                <xctk:MaskedTextBox  Grid.Column="1" Grid.Row="4" x:Name="_maskedTextBox" LostFocus="_maskedTextBox_LostFocus" VerticalAlignment="Center" Margin="0,0,0,0" Height="26" GotFocus="_maskedTextBox_GotFocus"/>
+                <TextBox x:Name="RegPassSeries" Grid.Column="1" Grid.Row="5" PreviewTextInput="RegPassSeries_PreviewTextInput" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="0,0,0,0" VerticalAlignment="Center" MaxLength="6" Height="36">
                     <materialDesign:HintAssist.Hint>
                         <StackPanel
                                     Orientation="Horizontal"
@@ -86,7 +113,7 @@
                         </StackPanel>
                     </materialDesign:HintAssist.Hint>
                 </TextBox>
-                <TextBox x:Name="RegPassNumber" PreviewTextInput="RegPassNumber_PreviewTextInput" Style="{StaticResource MaterialDesignFloatingHintTextBox}" HorizontalAlignment="Center" Margin="0,200,0,0" MaxLength="4" VerticalAlignment="Top" Height="40" Width="200">
+                <TextBox x:Name="RegPassNumber" Grid.Column="1" Grid.Row="6" PreviewTextInput="RegPassNumber_PreviewTextInput" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="0,0,0,0" MaxLength="4" VerticalAlignment="Center" Height="36">
                     <materialDesign:HintAssist.Hint>
                         <StackPanel
                                     Orientation="Horizontal"
@@ -97,9 +124,10 @@
                         </StackPanel>
                     </materialDesign:HintAssist.Hint>
                 </TextBox>
-                <Button x:Name="InputData" VerticalAlignment="Bottom" Content="Отправить данные" Margin="45,0,45,50" Click="InputData_Click"/>
-                <Label Content="AVB Inc PRODUCTION" HorizontalAlignment="Left" Margin="0" VerticalAlignment="Bottom" IsEnabled="False" Height="25" Width="775" HorizontalContentAlignment="Center"/>
+                <Button Grid.Column="1" Grid.Row="7"  x:Name="InputData" VerticalAlignment="Bottom" Content="Отправить данные" Margin="0" Click="InputData_Click"/>
+                <Label Grid.Column="1" Grid.Row="8"  Content="AVB Inc PRODUCTION" Margin="0" VerticalAlignment="Center" IsEnabled="False" Height="25" HorizontalContentAlignment="Center"/>
             </Grid>
         </GroupBox>
     </Grid>
 </Window>
+    
