--- a/RZDKursovoy/ReservationControl.xaml
+++ b/RZDKursovoy/ReservationControl.xaml
@@ -1,15 +1,15 @@
-﻿<Window x:Class="RZDKursovoy.ReservationForm"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-        xmlns:local="clr-namespace:RZDKursovoy"
-        xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
-        mc:Ignorable="d"
-        Title="Резервирование" MinHeight="450" MinWidth="799" Height="450" Width="799" ResizeMode="CanResize" WindowStartupLocation="CenterScreen">
-    <Grid>
-        <GroupBox x:Name="ChooseTrainBox" Header="Выбор поезда" Margin="0" d:IsHidden="True">
+﻿<UserControl x:Class="RZDKursovoy.ReservationControl"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:local="clr-namespace:RZDKursovoy"
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+             xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
+             mc:Ignorable="d" 
+             d:DesignHeight="450" d:DesignWidth="800">
+    <Grid Background="White">
+        <GroupBox x:Name="ChooseTrainBox" Header="Выберите поезд" Margin="0" d:IsHidden="True">
             <Grid>
                 <!--<ListBox x:Name="ChooseTrainListBox" Width="772" Loaded="ChooseTrainListBox_Loaded" Margin="0,0,0,30"/>-->
                 <Button x:Name="ChooseTrainNextButton" VerticalAlignment="Bottom" Content="Далее" Height="29" Margin="0" Click="ChooseTrainNextButton_Click" RenderTransformOrigin="0.497,1.172"/>
@@ -50,7 +50,7 @@
             </Grid>
         </GroupBox>
         <GroupBox x:Name="InputPersonalDataBox" Margin="0" BorderBrush="Black" Header="Ввод данных" Foreground="Black" Background="{x:Null}">
-            <Grid ShowGridLines="True" x:Name="test">
+            <Grid x:Name="test" ShowGridLines="True">
                 <Grid.RowDefinitions>
                     <RowDefinition></RowDefinition>
                     <RowDefinition Height="40"></RowDefinition>
@@ -63,11 +63,11 @@
                     <RowDefinition></RowDefinition>
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="150"></ColumnDefinition>
+                    <ColumnDefinition Width="50"></ColumnDefinition>
                     <ColumnDefinition></ColumnDefinition>
-                    <ColumnDefinition Width="150"></ColumnDefinition>
+                    <ColumnDefinition Width="50"></ColumnDefinition>
                 </Grid.ColumnDefinitions>
-                <TextBox x:Name="RegFamBox" Grid.Column="1" Grid.Row="1" PreviewTextInput="RegFamBox_PreviewTextInput" MaxLength="30" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="0,0,0,0" VerticalAlignment="Center" Height="36">
+                <TextBox x:Name="RegFamBox" Grid.Column="1" Grid.Row="1" PreviewTextInput="RegFamBox_PreviewTextInput" MaxLength="30" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="180,0" VerticalAlignment="Center" Height="36" Width="282">
                     <materialDesign:HintAssist.Hint>
                         <StackPanel
                                     Orientation="Horizontal"
@@ -78,7 +78,7 @@
                         </StackPanel>
                     </materialDesign:HintAssist.Hint>
                 </TextBox>
-                <TextBox MaxLength="30" Grid.Column="1" Grid.Row="2" x:Name="RegNameBox" PreviewTextInput="RegNameBox_PreviewTextInput" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="0,0,0,0" Height="36" VerticalAlignment="Center">
+                <TextBox MaxLength="30" Grid.Column="1" Grid.Row="2" x:Name="RegNameBox" PreviewTextInput="RegNameBox_PreviewTextInput" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="180,0" Height="36" VerticalAlignment="Center" Width="282">
                     <materialDesign:HintAssist.Hint>
                         <StackPanel
                                     Orientation="Horizontal"
@@ -89,7 +89,7 @@
                         </StackPanel>
                     </materialDesign:HintAssist.Hint>
                 </TextBox>
-                <TextBox x:Name="RegPathrBox"  Grid.Column="1" Grid.Row="3" PreviewTextInput="RegPathrBox_PreviewTextInput"  Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="0,0,0,0" VerticalAlignment="Center" MaxLength="30" Height="40">
+                <TextBox x:Name="RegPathrBox"  Grid.Column="1" Grid.Row="3" PreviewTextInput="RegPathrBox_PreviewTextInput"  Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="180,0" VerticalAlignment="Center" MaxLength="30" Height="40" Width="282">
                     <materialDesign:HintAssist.Hint>
                         <StackPanel
                                     Orientation="Horizontal"
@@ -100,9 +100,9 @@
                         </StackPanel>
                     </materialDesign:HintAssist.Hint>
                 </TextBox>
-                <materialDesign:PackIcon  Grid.Column="0" Grid.Row="4" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="0,0,0,0" Kind="Phone" />
-                <xctk:MaskedTextBox  Grid.Column="1" Grid.Row="4" x:Name="_maskedTextBox" LostFocus="_maskedTextBox_LostFocus" VerticalAlignment="Center" Margin="0,0,0,0" Height="26" GotFocus="_maskedTextBox_GotFocus"/>
-                <TextBox x:Name="RegPassSeries" Grid.Column="1" Grid.Row="5" PreviewTextInput="RegPassSeries_PreviewTextInput" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="0,0,0,0" VerticalAlignment="Center" MaxLength="6" Height="36">
+                <materialDesign:PackIcon Grid.Column="1" Grid.Row="4" VerticalAlignment="Center" HorizontalAlignment="Center" Kind="Phone" Margin="0,0,300,0" />
+                <xctk:MaskedTextBox  materialDesign:HintAssist.Hint="test" Grid.Column="1" Grid.Row="4" x:Name="_maskedTextBox" LostFocus="_maskedTextBox_LostFocus" VerticalAlignment="Center" Margin="180,0" Height="26" GotFocus="_maskedTextBox_GotFocus" Width="282"/>
+                <TextBox x:Name="RegPassSeries" Grid.Column="1" Grid.Row="5" PreviewTextInput="RegPassSeries_PreviewTextInput" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="180,0" VerticalAlignment="Center" MaxLength="6" Height="36" Width="282">
                     <materialDesign:HintAssist.Hint>
                         <StackPanel
                                     Orientation="Horizontal"
@@ -113,7 +113,7 @@
                         </StackPanel>
                     </materialDesign:HintAssist.Hint>
                 </TextBox>
-                <TextBox x:Name="RegPassNumber" Grid.Column="1" Grid.Row="6" PreviewTextInput="RegPassNumber_PreviewTextInput" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="0,0,0,0" MaxLength="4" VerticalAlignment="Center" Height="36">
+                <TextBox x:Name="RegPassNumber" Grid.Column="1" Grid.Row="6" PreviewTextInput="RegPassNumber_PreviewTextInput" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="180,0" MaxLength="4" VerticalAlignment="Center" Height="36" Width="282">
                     <materialDesign:HintAssist.Hint>
                         <StackPanel
                                     Orientation="Horizontal"
@@ -124,10 +124,9 @@
                         </StackPanel>
                     </materialDesign:HintAssist.Hint>
                 </TextBox>
-                <Button Grid.Column="1" Grid.Row="7"  x:Name="InputData" VerticalAlignment="Bottom" Content="Отправить данные" Margin="0" Click="InputData_Click"/>
+                <Button Grid.Column="1" Grid.Row="7"  x:Name="InputData" VerticalAlignment="Bottom" Content="Отправить данные" Margin="180,0" Click="InputData_Click" Width="282"/>
                 <Label Grid.Column="1" Grid.Row="8"  Content="AVB Inc PRODUCTION" Margin="0" VerticalAlignment="Center" IsEnabled="False" Height="25" HorizontalContentAlignment="Center"/>
             </Grid>
         </GroupBox>
     </Grid>
-</Window>
-    
+</UserControl>
