--- a/RZDKursovoy/ReservationControl.xaml
+++ b/RZDKursovoy/ReservationControl.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="RZDKursovoy.ReservationControl"
+﻿    <UserControl x:Class="RZDKursovoy.ReservationControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -7,7 +7,7 @@
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="450" MinHeight="450" MinWidth="800" d:DesignWidth="800">
     <Grid Background="White">
         <GroupBox x:Name="ChooseTrainBox" Header="Выберите поезд" Margin="0" d:IsHidden="True">
             <Grid>
@@ -50,7 +50,7 @@
             </Grid>
         </GroupBox>
         <GroupBox x:Name="InputPersonalDataBox" Margin="0" BorderBrush="Black" Header="Ввод данных" Foreground="Black" Background="{x:Null}">
-            <Grid x:Name="test" ShowGridLines="True">
+            <Grid x:Name="test">
                 <Grid.RowDefinitions>
                     <RowDefinition></RowDefinition>
                     <RowDefinition Height="40"></RowDefinition>
