--- a/RZDKursovoy/Dispatcher_AddTrain.xaml
+++ b/RZDKursovoy/Dispatcher_AddTrain.xaml
@@ -25,6 +25,7 @@
                     Style="{StaticResource MaterialDesignFloatingHintComboBox}" HorizontalAlignment="Center" Margin="0,0,0,100" Width="289">
                 </ComboBox>
                 <ComboBox Loaded="RailcarType_BOX_Loaded" materialDesign:HintAssist.Hint="Тип поезда" x:Name="RailcarType_BOX"
+                    IsEditable="True"
                     Style="{StaticResource MaterialDesignFloatingHintComboBox}" HorizontalAlignment="Center" Margin="0,0,0,10" Width="289">
                 </ComboBox>
                 <ComboBox Loaded="RailcarRout_BOX_Loaded" materialDesign:HintAssist.Hint="Маршрут" x:Name="RailcarRout_BOX"
