--- a/RZDKursovoy/Dispatcher_AddStop.xaml
+++ b/RZDKursovoy/Dispatcher_AddStop.xaml
@@ -5,8 +5,41 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:RZDKursovoy"
              mc:Ignorable="d" 
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-            
+        <GroupBox Header="Добавление остановки">
+            <Grid>
+                <ComboBox LostFocus="RoutName_BOX_LostFocus" Loaded="RoutName_BOX_Loaded" materialDesign:HintAssist.Hint="Название маршрута" x:Name="RoutName_BOX"
+                    Style="{StaticResource MaterialDesignFloatingHintComboBox}" HorizontalAlignment="Center" Margin="0,0,0,150" Width="289">
+                </ComboBox>
+                <ComboBox materialDesign:HintAssist.Hint="Номер остановки" x:Name="StopID"
+                    Style="{StaticResource MaterialDesignFloatingHintComboBox}" HorizontalAlignment="Center" Margin="0,0,0,70" Width="289">
+                </ComboBox>
+                <TextBox PreviewTextInput="StopName_PreviewTextInput" x:Name="StopName" MaxLength="20" Style="{StaticResource MaterialDesignFloatingHintTextBox}" VerticalAlignment="Center" Height="36" Width="282" HorizontalAlignment="Center" Margin="0,10,0,0">
+                    <materialDesign:HintAssist.Hint>
+                        <StackPanel
+                                    Orientation="Horizontal"
+                                    Margin="-2 0 0 0">
+                            <TextBlock>
+                                    Название остановки
+                            </TextBlock>
+                        </StackPanel>
+                    </materialDesign:HintAssist.Hint>
+                </TextBox>
+                <TextBox PreviewTextInput="Train_Station_Name_PreviewTextInput" x:Name="Train_Station_Name" MaxLength="20" Style="{StaticResource MaterialDesignFloatingHintTextBox}" VerticalAlignment="Center" Height="36" Width="282" HorizontalAlignment="Center" Margin="0,80,0,0">
+                    <materialDesign:HintAssist.Hint>
+                        <StackPanel
+                                    Orientation="Horizontal"
+                                    Margin="-2 0 0 0">
+                            <TextBlock>
+                                    Название вокзала
+                            </TextBlock>
+                        </StackPanel>
+                    </materialDesign:HintAssist.Hint>
+                </TextBox>
+                <Button x:Name="AddStop_BUTTON" Click="AddStop_BUTTON_Click" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,160,0,0" Width="289" Content="Добавить"></Button>
+            </Grid>
+        </GroupBox>
     </Grid>
 </UserControl>
