--- a/RZDKursovoy/Dispatcher_AddArrival.xaml
+++ b/RZDKursovoy/Dispatcher_AddArrival.xaml
@@ -8,28 +8,20 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-        <GroupBox Header="Добавление прибытий">
+        <GroupBox Header="Добавление прибытия поезда">
             <Grid>
                 <ComboBox LostFocus="RoutName_BOX_LostFocus" Loaded="RoutName_BOX_Loaded" materialDesign:HintAssist.Hint="Название маршрута" x:Name="RoutName_BOX"
                     Style="{StaticResource MaterialDesignFloatingHintComboBox}" HorizontalAlignment="Center" Margin="0,0,0,200" Width="289">
                 </ComboBox>
-                <ComboBox Loaded="StopName_BOX_Loaded" materialDesign:HintAssist.Hint="Название остановки" x:Name="StopName_BOX"
+                <ComboBox materialDesign:HintAssist.Hint="Название остановки" x:Name="StopName_BOX"
                     Style="{StaticResource MaterialDesignFloatingHintComboBox}" HorizontalAlignment="Center" Margin="0,0,0,130" Width="289">
                 </ComboBox>
-                <TextBox x:Name="StopName" MaxLength="5" Style="{StaticResource MaterialDesignFloatingHintTextBox}" VerticalAlignment="Center" Height="36" Width="289" HorizontalAlignment="Center" Margin="0,0,0,60">
-                    <materialDesign:HintAssist.Hint>
-                        <StackPanel
-                                    Orientation="Horizontal"
-                                    Margin="-2 0 0 0">
-                            <TextBlock>
-                                    Номер поезда
-                            </TextBlock>
-                        </StackPanel>
-                    </materialDesign:HintAssist.Hint>
-                </TextBox>
-                <materialDesign:TimePicker HorizontalAlignment="Center" Margin="0,20,0,0" materialDesign:HintAssist.Hint="Время" x:Name="ArrivalTime" Width="289" VerticalAlignment="Center"></materialDesign:TimePicker>
-                <DatePicker x:Name="ArrivalDate" VerticalAlignment="Center" materialDesign:HintAssist.Hint="Дата" HorizontalAlignment="Center" Width="289" Margin="0,80,0,0" ></DatePicker>
-                <Button x:Name="AddArrival_BUTTON" VerticalAlignment="Center" Width="289" Content="Добавить" HorizontalAlignment="Center" Margin="0,150,0,0"></Button>
+                <ComboBox materialDesign:HintAssist.Hint="Номер поезда" x:Name="Train_Number_BOX"
+                    Style="{StaticResource MaterialDesignFloatingHintComboBox}" HorizontalAlignment="Center" Margin="0,0,0,60" Width="289">
+                </ComboBox>
+                <materialDesign:TimePicker Language="ru-RU" HorizontalAlignment="Center" Margin="0,20,0,0" materialDesign:HintAssist.Hint="Время" x:Name="ArrivalTime" Width="289" VerticalAlignment="Center"></materialDesign:TimePicker>
+                <DatePicker x:Name="ArrivalDate" Language="ru-RU" VerticalAlignment="Center" materialDesign:HintAssist.Hint="Дата" HorizontalAlignment="Center" Width="289" Margin="0,80,0,0" ></DatePicker>
+                <Button x:Name="AddArrival_BUTTON" Click="AddArrival_BUTTON_Click" VerticalAlignment="Center" Width="289" Content="Добавить" HorizontalAlignment="Center" Margin="0,150,0,0"></Button>
             </Grid>
         </GroupBox>  
     </Grid>
