--- a/RZDKursovoy/Dispatcher_AddRout.xaml
+++ b/RZDKursovoy/Dispatcher_AddRout.xaml
@@ -10,7 +10,7 @@
     <Grid>
         <GroupBox Header="Добавление маршрута">
             <Grid>
-                <TextBox PreviewTextInput="RoutName_BOX_PreviewTextInput" x:Name="RoutName_BOX" MaxLength="20" Style="{StaticResource MaterialDesignFloatingHintTextBox}" VerticalAlignment="Center" Height="36" Width="282" HorizontalAlignment="Center" Margin="0,0,0,120">
+                <TextBox PreviewTextInput="RoutName_BOX_PreviewTextInput" PreviewKeyUp="RoutName_BOX_PreviewKeyUp" x:Name="RoutName_BOX" MaxLength="20" Style="{StaticResource MaterialDesignFloatingHintTextBox}" VerticalAlignment="Center" Height="36" Width="282" HorizontalAlignment="Center" Margin="0,0,0,120">
                     <materialDesign:HintAssist.Hint>
                         <StackPanel
                                     Orientation="Horizontal"
