--- a/RZDKursovoy/ReservationControl.xaml
+++ b/RZDKursovoy/ReservationControl.xaml
@@ -67,7 +67,7 @@
                 <ColumnDefinition></ColumnDefinition>
                 <ColumnDefinition Width="50"></ColumnDefinition>
             </Grid.ColumnDefinitions>
-            <TextBox x:Name="RegFamBox" Grid.Column="1" Grid.Row="1" PreviewTextInput="RegFamBox_PreviewTextInput" MaxLength="30" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="180,0" VerticalAlignment="Center" Height="36" Width="282">
+            <TextBox x:Name="RegFamBox" Grid.Column="1" Grid.Row="1" PreviewKeyUp="RegFamBox_PreviewKeyUp" PreviewTextInput="RegFamBox_PreviewTextInput" MaxLength="30" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="180,0" VerticalAlignment="Center" Height="36" Width="282">
                 <materialDesign:HintAssist.Hint>
                     <StackPanel
                                 Orientation="Horizontal"
@@ -78,7 +78,7 @@
                     </StackPanel>
                 </materialDesign:HintAssist.Hint>
             </TextBox>
-            <TextBox MaxLength="30" Grid.Column="1" Grid.Row="2" x:Name="RegNameBox" PreviewTextInput="RegNameBox_PreviewTextInput" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="180,0" Height="36" VerticalAlignment="Center" Width="282">
+            <TextBox MaxLength="30" Grid.Column="1" Grid.Row="2" x:Name="RegNameBox" PreviewKeyUp="RegNameBox_PreviewKeyUp" PreviewTextInput="RegNameBox_PreviewTextInput" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="180,0" Height="36" VerticalAlignment="Center" Width="282">
                 <materialDesign:HintAssist.Hint>
                     <StackPanel
                                 Orientation="Horizontal"
@@ -89,7 +89,7 @@
                     </StackPanel>
                 </materialDesign:HintAssist.Hint>
             </TextBox>
-            <TextBox x:Name="RegPathrBox"  Grid.Column="1" Grid.Row="3" PreviewTextInput="RegPathrBox_PreviewTextInput"  Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="180,0" VerticalAlignment="Center" MaxLength="30" Height="40" Width="282">
+            <TextBox x:Name="RegPathrBox"  Grid.Column="1" Grid.Row="3" PreviewTextInput="RegPathrBox_PreviewTextInput" PreviewKeyUp="RegPathrBox_PreviewKeyUp"  Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="180,0" VerticalAlignment="Center" MaxLength="30" Height="40" Width="282">
                 <materialDesign:HintAssist.Hint>
                     <StackPanel
                                 Orientation="Horizontal"
@@ -102,7 +102,7 @@
             </TextBox>
             <materialDesign:PackIcon Grid.Column="1" Grid.Row="4" VerticalAlignment="Center" HorizontalAlignment="Center" Kind="Phone" Margin="0,0,300,0" />
             <xctk:MaskedTextBox  materialDesign:HintAssist.Hint="test" Grid.Column="1" Grid.Row="4" x:Name="_maskedTextBox" LostFocus="_maskedTextBox_LostFocus" VerticalAlignment="Center" Margin="180,0" Height="26" GotFocus="_maskedTextBox_GotFocus" Width="282"/>
-            <TextBox x:Name="RegPassSeries" Grid.Column="1" Grid.Row="5" PreviewTextInput="RegPassSeries_PreviewTextInput" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="180,0" VerticalAlignment="Center" MaxLength="4" Height="36" Width="282">
+            <TextBox x:Name="RegPassSeries" Grid.Column="1" Grid.Row="5" PreviewTextInput="RegPassSeries_PreviewTextInput" PreviewKeyUp="RegPassSeries_PreviewKeyUp" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="180,0" VerticalAlignment="Center" MaxLength="4" Height="36" Width="282">
                 <materialDesign:HintAssist.Hint>
                     <StackPanel
                                 Orientation="Horizontal"
@@ -113,7 +113,7 @@
                     </StackPanel>
                 </materialDesign:HintAssist.Hint>
             </TextBox>
-            <TextBox x:Name="RegPassNumber" Grid.Column="1" Grid.Row="6" PreviewTextInput="RegPassNumber_PreviewTextInput" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="180,0" MaxLength="6" VerticalAlignment="Center" Height="36" Width="282">
+            <TextBox x:Name="RegPassNumber" Grid.Column="1" Grid.Row="6" PreviewTextInput="RegPassNumber_PreviewTextInput" PreviewKeyUp="RegPassNumber_PreviewKeyUp" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="180,0" MaxLength="6" VerticalAlignment="Center" Height="36" Width="282">
                 <materialDesign:HintAssist.Hint>
                     <StackPanel
                                 Orientation="Horizontal"
