--- a/RZDKursovoy/Admin_Interface_In_To_Face.xaml
+++ b/RZDKursovoy/Admin_Interface_In_To_Face.xaml
@@ -7,7 +7,7 @@
              mc:Ignorable="d" 
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:dragablz="http://dragablz.net/winfx/xaml/dragablz"
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="450" MinHeight="450" d:DesignWidth="800" MinWidth="800">
     <Grid x:Name="Reflector">
         <dragablz:TabablzControl x:Name="ControlMenu" Loaded="ControlMenu_Loaded">
             <TabItem x:Name="Reservation_TAB"
