--- a/RZDKursovoy/Authorization.xaml
+++ b/RZDKursovoy/Authorization.xaml
@@ -6,9 +6,8 @@
         xmlns:local="clr-namespace:RZDKursovoy"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
-        Title="" MinHeight="550" MinWidth="800" Height="550" Width="800" ResizeMode="CanResize" WindowStartupLocation="CenterScreen">
+        Title="Билеты" MinHeight="550" MinWidth="800" Height="550" Width="800" ResizeMode="CanResize" WindowStartupLocation="CenterScreen">
     <Grid x:Name="mainGrid">
-        <!--516,303-->
         <Grid x:Name="RegGrid" d:IsHidden="True">
             <GroupBox x:Name="RegGB" Header="Регистрация">
                 <Grid>
