--- a/RZDKursovoy/Dispatcher_AddArrival.xaml
+++ b/RZDKursovoy/Dispatcher_AddArrival.xaml
@@ -10,13 +10,13 @@
     <Grid>
         <GroupBox Header="Добавление прибытия поезда">
             <Grid>
-                <ComboBox LostFocus="RoutName_BOX_LostFocus" Loaded="RoutName_BOX_Loaded" materialDesign:HintAssist.Hint="Название маршрута" x:Name="RoutName_BOX"
+                <ComboBox LostFocus="RoutName_BOX_LostFocus" PreviewTextInput="RoutName_BOX_PreviewTextInput" PreviewKeyUp="RoutName_BOX_PreviewKeyUp" Loaded="RoutName_BOX_Loaded" materialDesign:HintAssist.Hint="Название маршрута" x:Name="RoutName_BOX"
                     Style="{StaticResource MaterialDesignFloatingHintComboBox}" HorizontalAlignment="Center" Margin="0,0,0,200" Width="289">
                 </ComboBox>
-                <ComboBox materialDesign:HintAssist.Hint="Название остановки" x:Name="StopName_BOX"
+                <ComboBox materialDesign:HintAssist.Hint="Название остановки" PreviewTextInput="StopName_BOX_PreviewTextInput" PreviewKeyUp="StopName_BOX_PreviewKeyUp" x:Name="StopName_BOX"
                     Style="{StaticResource MaterialDesignFloatingHintComboBox}" HorizontalAlignment="Center" Margin="0,0,0,130" Width="289">
                 </ComboBox>
-                <ComboBox materialDesign:HintAssist.Hint="Номер поезда" x:Name="Train_Number_BOX"
+                <ComboBox materialDesign:HintAssist.Hint="Номер поезда" PreviewTextInput="Train_Number_BOX_PreviewTextInput" PreviewKeyUp="Train_Number_BOX_PreviewKeyUp" x:Name="Train_Number_BOX"
                     Style="{StaticResource MaterialDesignFloatingHintComboBox}" HorizontalAlignment="Center" Margin="0,0,0,60" Width="289">
                 </ComboBox>
                 <materialDesign:TimePicker Language="ru-RU" HorizontalAlignment="Center" Margin="0,20,0,0" materialDesign:HintAssist.Hint="Время" x:Name="ArrivalTime" Width="289" VerticalAlignment="Center"></materialDesign:TimePicker>
